seaqt/QtMultimedia/gen_qcameralockscontrol.h

class QCameraLocksControl;
class QMetaObject;
typedef struct QCameraLocksControl QCameraLocksControl;
typedef struct QMetaObject QMetaObject;
QMetaObject* QCameraLocksControl_metaObject(const QCameraLocksControl* self);
void* QCameraLocksControl_metacast(QCameraLocksControl* self, const char* param1);
struct miqt_string QCameraLocksControl_tr(const char* s);
struct miqt_string QCameraLocksControl_trUtf8(const char* s);
int QCameraLocksControl_supportedLocks(const QCameraLocksControl* self);
int QCameraLocksControl_lockStatus(const QCameraLocksControl* self, int lock);
void QCameraLocksControl_searchAndLock(QCameraLocksControl* self, int locks);
void QCameraLocksControl_unlock(QCameraLocksControl* self, int locks);
void QCameraLocksControl_lockStatusChanged(QCameraLocksControl* self, int type, int status, int reason);
void QCameraLocksControl_connect_lockStatusChanged(QCameraLocksControl* self, intptr_t slot);
struct miqt_string QCameraLocksControl_tr2(const char* s, const char* c);
struct miqt_string QCameraLocksControl_tr3(const char* s, const char* c, int n);
struct miqt_string QCameraLocksControl_trUtf82(const char* s, const char* c);
struct miqt_string QCameraLocksControl_trUtf83(const char* s, const char* c, int n);
void QCameraLocksControl_delete(QCameraLocksControl* self);